<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription" >

    <saphion.pageindicators.FixedTabsView
        android:id="@+id/fixed_icon_tabs"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height"
        android:background="@color/blackish"
        app:dividerColor="#33FFFFFF"
        app:dividerMarginBottom="12dip"
        app:dividerMarginTop="12dip" />

    <!--
          <com.viewpagerindicator.TabPageIndicator
        android:id="@+id/indicator"
        android:layout_height="wrap_content"
        
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
    -->

    <saphion.fragments.ExtendedViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/abc_action_bar_default_height" />

    <RelativeLayout
        android:id="@+id/rlsplash"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ff111111" >

        <RelativeLayout
            android:id="@+id/rlimages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true" >

            <ImageView
                android:id="@+id/ivsplash"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/battery"
                android:src="@drawable/baticon" />

            <ImageView
                android:id="@+id/ivsplashedit"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/battery"
                android:src="@drawable/mydial2" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/tvBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:text="@string/battery"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#33b5e5"
                android:textSize="40sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/tvCaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBattery"
                android:layout_toRightOf="@+id/tvBattery"
                android:text="@string/caster"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#33b5e5"
                android:textSize="40sp"
                android:typeface="normal" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="3.5dp"
            android:layout_above="@+id/rlimages"
            android:layout_margin="7dp"
            android:background="#595959" />

        <TextView
            android:id="@+id/tvinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlimages"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/initialising_for_first_use"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffefefef"
            android:textSize="20sp"
            android:typeface="normal" />
    </RelativeLayout>

</RelativeLayout>